2010-10-18  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Csaba Osztrogonác.

        Build broken with JIT disabled
        https://bugs.webkit.org/show_bug.cgi?id=47801

        This is a regression caused by r69940.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::resolveBase):

2010-10-18  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Darin Adler.

        Change FastAllocBase implementation into a macro
        https://bugs.webkit.org/show_bug.cgi?id=42998

        It was investigated in bug #33896 that inheriting classes from FastAllocBase 
        can result in objects getting larger which leads to memory regressions. 
        Using a macro instead of inheriting classes from FastAllocBase would solve the issue. 

        * wtf/FastAllocBase.h: Add a WTF_MAKE_FAST_ALLOCATED macro

2010-10-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Strict mode: arguments is not valid as the base expression for pre- or post-fix expressions
        https://bugs.webkit.org/show_bug.cgi?id=47791

        Simple fix, check for arguments in addition to eval.

        * parser/JSParser.cpp:
        (JSC::JSParser::parseUnaryExpression):

2010-10-17  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Strict mode: Assignment that would create a global should be a late ReferenceError, not a syntax failure
        https://bugs.webkit.org/show_bug.cgi?id=47788

        Fixing this required a couple of changes:
         * resolve_base now has a flag to indicate whether it is being used for a put in strict mode.
           this allows us to throw an exception when we're doing a completely generic resolve for
           assignment, and that assignment would create a new global.
         * There is a new opcode 'op_ensure_property_exists' that is used to determine whether
           the property being assigned to already exists on the global object.  This currently